# git-gpt

./: .gitignore  README.rst  commit.py  setup.cfg  setup.py
git_gpt/: __init__.py  __main__.py  commit.py
