[metadata]
name = git-gpt
version = attr: git_gpt.__version__
url = https://github.com/programmarchy/git-gpt
author = Donald Ness
author_email = donald.ness@gmail.com
description = Generate commit messages using OpenAI GPT-3.
long_description = file: README.rst
keywords = gpt, git
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.8
packages = find:
zip_safe = false
install_requires =
  openai >= 0.26.1

[options.package_data]
* = *.txt, *.rst, LICENSE

[options.entry_points]
console_scripts =
    git-gpt = git_gpt.__main__:main
